[package]
name = "rust-foo"
version = "0.1.0"
authors = ["Gabrielius MickeviÄius <gabrielius.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
fraction = "0.10.0"

[lib]
crate-type = ["cdylib", "rlib"]
